<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/background1"
    tools:context=".LoginActivity">

    <!-- EditText for email -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="377dp"
        android:layout_height="76dp"
        android:layout_marginTop="32dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_button_white"
        android:paddingStart="8dp"
        />

    <!-- EditText for password -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="377dp"
        android:layout_height="73dp"
        android:layout_below="@id/emailEditText"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/rounded_button_white"
        android:layout_centerHorizontal="true"
        android:paddingStart="8dp" />

    <!-- Login Button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button_background"
        />

    <!-- SignUp Button -->
    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/singUp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button_background" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>
